--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 <body>
     <div>
         <div>
-            <h1>jkjkjkjkjkjkjkjkjkjkjkjkjkjk</h1>
-            <h3>hjhjbnbnvbvbxcxcxcxc</h3>
-        </div>
-        <div>
-            <p>Hello Hello Hello</p>
+            <h1>Learn Node.JS</h1>
+            <p>...</p>
         </div>
     </div>
 </body>
