--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <div>
             <h1>Learn Node.JS</h1>
-            <p>...</p>
+            <p>This is Mac OS Visual Studio Test.</p>
         </div>
     </div>
 </body>
