--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div>
         <div>
             <h1>Learn Node.JS</h1>
-            <p>This is Mac OS Visual Studio Test.</p>
-            <p>This is Windows Visual Studio Test.</p>
+            <p>This is Mac OS.</p>
+            <p>This is Windows.</p>
         </div>
     </div>
 </body>
